--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "facebook-messenger-bot",
   "version": "1.0.0",
-  "description": "Facebook Messenger Bot",
+  "description": "Facebook Messenger Bot With Node.js",
   "main": "app.js",
   "scripts": {
     "start": "node app",
